--- a/wiki/it/Macro_Replace_Part_in_Assembly.html
+++ b/wiki/it/Macro_Replace_Part_in_Assembly.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Teil in Baugruppe ersetzen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Replace_Part_in_Assembly.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Replace Part in Assembly (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Replace Part in Assembly (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Replace_Part_in_Assembly.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Zamie&#324; cze&#347;&#263; w z&#322;o&#380;eniu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -94,12 +94,8 @@ Sostituisci Parte in Assembly
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Macro Replace_Part_in_Assembly.py
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Replace_Part.png&amp;filetimestamp=20141116200051&amp;.html" class="mw-file-description"><img src="../File/Replace_Part.png" decoding="async" width="50" height="47" class="mw-file-element" data-file-width="50" data-file-height="47"></a></span>
-</p>
-</div>
-<p><b>Macro Replace_Part_in_Assembly.py</b>
+</p><p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Replace_Part.png&amp;filetimestamp=20141116200051&amp;.html" class="mw-file-description"><img src="../File/Replace_Part.png" decoding="async" width="50" height="47" class="mw-file-element" data-file-width="50" data-file-height="47"></a></span>
+</p><p><b>Macro Replace_Part_in_Assembly.py</b>
 </p>
 <pre>#!/usr/bin/env python
 # -*- coding: utf-8 -*-
@@ -678,29 +674,29 @@ class replace():
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260122105545
+Cached time: 20260122105557
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 92/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.064 seconds
+Preprocessor visited node count: 91/1000000
 Post&#8208;expand include size: 1955/2097152 bytes
 Template argument size: 27726/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28635/5000000 bytes
+Unstrip post&#8208;expand size: 28639/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.856      1 -total
- 41.24%    4.065      1 Template:Macro/it
- 34.35%    3.385      1 Template:MacroCode
- 21.48%    2.117      1 Template:Clear
+100.00%   10.307      1 -total
+ 42.04%    4.333      1 Template:Macro/it
+ 34.59%    3.565      1 Template:MacroCode
+ 20.80%    2.144      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105545 and revision id 1742272. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:47835-0!canonical and timestamp 20260122105557 and revision id 1742274. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
