--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Texture/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Texture&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--high" title="Makro Texture (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Textur (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Texture.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Texture (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Texture (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Texture (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--low" title="Makrodefinicja: Tekstura (2% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../cs/Macro_Texture.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Texture (36% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -74,11 +74,11 @@ Texture
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro permette di creare facilmente un modello 3D partendo da una immagine bitmap con 256 livelli di grigio.
 </p>
 </div>
@@ -133,9 +133,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Texture 004 Honda</p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Questo macro ha bisogno di una immagine con 256 livelli di grigio (0-255) (8 bit) pertanto prima di utilizzare la macro &egrave; necessario convertire l'immagine in scala di grigi. Il numero di colori viene rilevato automaticamente. Ogni colore viene trattato come un livello di grigio, il bianco (255) &egrave; il livello pi&ugrave; alto e il nero (0) &egrave; il livello pi&ugrave; basso. Se l'immagine ha pi&ugrave; di 256 colori (32 bit) viene attivato il modo Plan. (Il tempo di esecuzione delle funzioni di visualizzazione dei punti pu&ograve; essere molto lungo)
@@ -419,35 +419,35 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20251022191857
+Cached time: 20260122105658
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.180 seconds
-Real time usage: 0.224 seconds
+CPU time usage: 0.198 seconds
+Real time usage: 0.325 seconds
 Preprocessor visited node count: 738/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 19139/5000000 bytes
+Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   85.692      1 -total
-  3.79%    3.250      1 Template:Macro/it
-  2.62%    2.246      9 Template:CheckBox
-  1.97%    1.685      1 Template:Code
-  1.93%    1.657      9 Template:SpinBox
-  1.78%    1.529      6 Template:RadioButton
-  1.36%    1.166      3 Template:Button
-  1.15%    0.989      1 Template:FALSE
-  1.15%    0.989      1 Template:Codeextralink
-  1.09%    0.934      1 Template:Caption
+100.00%  118.187      1 -total
+  1.50%    1.776      1 Template:Macro/it
+  1.48%    1.748      9 Template:CheckBox
+  1.42%    1.680      9 Template:SpinBox
+  1.18%    1.399      1 Template:Code
+  1.14%    1.345      6 Template:RadioButton
+  0.85%    1.007      1 Template:Codeextralink
+  0.85%    1.006      1 Template:FALSE
+  0.84%    0.988      3 Template:Button
+  0.76%    0.898      1 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20251022191857 and revision id 1673607. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105658 and revision id 1742278. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
