--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -211,11 +211,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonFalse.svg&amp;filetimestamp=20200323161942&amp;.html" class="mw-file-description"><img src="../File/RadioButtonFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Plan<span></span></span>&nbsp;: Il modo Plan consente di importare una immagine di <b>32 bit</b> e ignorare lo sfondo del piano. Il colore predefinito dello sfondo del piano &egrave; il nero,  per ignorare pi&ugrave; colori regolare il <b>Capping</b>. Se &egrave; selezionato il bianco, ignora il bianco e lascia passare tutti gli altri colori. (La procedura pu&ograve; essere lunga)</li></ul>
 </div>
 <h4><span class="mw-headline" id="File">File</span></h4>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Files">Files</span></h4>
-<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .pcd<span></span></span>&nbsp;: Se &egrave; selezionato viene salvato un file originalName.bmp.pcd nella stessa directory del file (pcd v0.7).</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .asc<span></span></span>&nbsp;: Se &egrave; selezionato viene salvato un file originalName.bmp.asc nella stessa directory del file. Questo file pu&ograve; essere usato come una nuvola di punti (formato: X Y Z).</li></ul>
-</div>
+<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .pcd<span></span></span>: se selezionato, un file (originalName.bmp.pcd) viene salvato nella stessa cartella del file (pcd v0.7).</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> .asc<span></span></span>: se selezionato, un file (originalName.bmp.asc) viene salvato nella stessa cartella del file. Questo file pu&ograve; essere utilizzato come nuvola di punti (formato: X Y Z).</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h4><span id="Capping_.2810mm.29"></span><span class="mw-headline" id="Capping_(10mm)">Capping (10mm)</span></h4>
 </div>
@@ -417,13 +414,13 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122105714
+Cached time: 20260122105756
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.194 seconds
-Real time usage: 0.286 seconds
-Preprocessor visited node count: 737/1000000
+CPU time usage: 0.140 seconds
+Real time usage: 0.165 seconds
+Preprocessor visited node count: 733/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
 Highest expansion depth: 6/100
@@ -433,19 +430,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  123.505      1 -total
-  4.45%    5.492      1 Template:Code
-  2.99%    3.689      6 Template:RadioButton
-  2.85%    3.521      1 Template:Macro/it
-  2.52%    3.114      1 Template:Codeextralink
-  2.44%    3.009      9 Template:CheckBox
-  2.26%    2.796      9 Template:SpinBox
-  1.94%    2.394      1 Template:TRUE
-  1.91%    2.360      3 Template:Button
-  1.70%    2.096      1 Template:Caption
+100.00%   64.750      1 -total
+  4.13%    2.672      6 Template:RadioButton
+  4.10%    2.654      1 Template:Macro/it
+  3.04%    1.967      9 Template:CheckBox
+  2.83%    1.831      9 Template:SpinBox
+  2.74%    1.777      1 Template:Codeextralink
+  2.73%    1.766      1 Template:Code
+  2.04%    1.322      3 Template:Button
+  2.04%    1.321      1 Template:Caption
+  1.39%    0.902      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105714 and revision id 1742280. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105755 and revision id 1742282. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
