--- a/wiki/it/Macro_Texture.html
+++ b/wiki/it/Macro_Texture.html
@@ -365,11 +365,10 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/262317bc7d8555885b0
 </ul> 
 </center> 
 <p><br>
+</p><p><span id="Links"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Links">Links</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link">Link</span></h2>
+<h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>La discussione sul <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=24&amp;t=5893">forum</a> per esprimere le proprie impressioni e contattare l'autore.
 </p>
 <div class="mw-translate-fuzzy">
@@ -414,12 +413,12 @@ che causa un errore con la seguente versione di FreeCAD&nbsp;: 0.14.3343 (Git), 
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260122105756
+Cached time: 20260122105815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.165 seconds
+CPU time usage: 0.184 seconds
+Real time usage: 0.244 seconds
 Preprocessor visited node count: 733/1000000
 Post&#8208;expand include size: 16381/2097152 bytes
 Template argument size: 2833/2097152 bytes
@@ -430,19 +429,19 @@ Unstrip post&#8208;expand size: 19148/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.750      1 -total
-  4.13%    2.672      6 Template:RadioButton
-  4.10%    2.654      1 Template:Macro/it
-  3.04%    1.967      9 Template:CheckBox
-  2.83%    1.831      9 Template:SpinBox
-  2.74%    1.777      1 Template:Codeextralink
-  2.73%    1.766      1 Template:Code
-  2.04%    1.322      3 Template:Button
-  2.04%    1.321      1 Template:Caption
-  1.39%    0.902      1 Template:FALSE
+100.00%  103.344      1 -total
+  4.31%    4.452      6 Template:RadioButton
+  4.04%    4.170      1 Template:Code
+  4.01%    4.142      9 Template:CheckBox
+  3.78%    3.903      1 Template:Macro/it
+  3.72%    3.840      1 Template:Codeextralink
+  3.61%    3.727      9 Template:SpinBox
+  2.07%    2.142      3 Template:Button
+  2.06%    2.127      1 Template:TRUE
+  1.36%    1.409      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105755 and revision id 1742282. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:25003-0!canonical and timestamp 20260122105815 and revision id 1742284. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
