--- a/wiki/fr/Cables_CableConduit.html
+++ b/wiki/fr/Cables_CableConduit.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Cables CableConduit/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Cables+CableConduit&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--high" title="Cables Leitungsf&uuml;hrung (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Cables_CableConduit.html" class="mw-pt-progress mw-pt-progress--complete" title="Cables Leitungsf&uuml;hrung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Cables_CableConduit.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Cables CableConduit (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Cables_Cable.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Cables_Cable.html" title="Cables Cable/fr">C&acirc;ble</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Cables_CableBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/Cables_CableBox.html" title="Cables CableBox/fr">Bo&icirc;te</a>
@@ -91,12 +91,10 @@ La gaine MC2 comprend la gaine C3 et le c&acirc;ble CB2.</p>
 <p>Pour les autres propri&eacute;t&eacute;s du groupe, voir <a href="../fr/Arch_Component.html#Propri%C3%A9t%C3%A9s" title="Arch Component/fr">Arch Composant</a>.
 </p><p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Conduit</span>
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Auto Label Base</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si la propri&eacute;t&eacute; est d&eacute;finie sur <code>true</code>, le nom d'une polyligne de base sera renomm&eacute; automatiquement. Pour rafra&icirc;chir le nom, la propri&eacute;t&eacute; doit &ecirc;tre chang&eacute;e en <code>false</code> puis &agrave; nouveau en <code>true</code>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Merge Sub Conduits</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si la valeur est <code>true</code>, tous les objets de la propri&eacute;t&eacute; <b>Sub Conduits</b> seront fusionn&eacute;s dans la forme finale. L'objet <a href="../fr/Part_Compound.html" title="Part Compound/fr">Part Compos&eacute;</a> contenant les sous-gaines est cr&eacute;&eacute; en premier, puis il est ajout&eacute; &agrave; la forme finale avec la propre forme de la <b>gaine</b>.</li>
-<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Show Sub Conduits</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: affiche/masque tous les sous-gaines. Cela ne fonctionne que si <b>Merge Sub Conduits</b> est r&eacute;gl&eacute; sur <code>true</code>.</li>
+<ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Auto Label Base</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si la propri&eacute;t&eacute; est d&eacute;finie sur <code>TRUE</code>, le nom d'une polyligne de base sera renomm&eacute; automatiquement. Pour rafra&icirc;chir le nom, la propri&eacute;t&eacute; doit &ecirc;tre chang&eacute;e en <code>FALSE</code> puis &agrave; nouveau en <code>TRUE</code>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Merge Sub Conduits</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: si la valeur est <code>TRUE</code>, tous les objets de la propri&eacute;t&eacute; <b>Sub Conduits</b> seront fusionn&eacute;s dans la forme finale. L'objet <a href="../fr/Part_Compound.html" title="Part Compound/fr">Part Compos&eacute;</a> contenant les sous-gaines est cr&eacute;&eacute; en premier, puis il est ajout&eacute; &agrave; la forme finale avec la propre forme de la <b>gaine</b>.</li>
+<li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Show Sub Conduits</b><span style="font-size:80%;"> (<code>Bool</code>)</span>&nbsp;: affiche/masque tous les sous-gaines. Cela ne fonctionne que si <b>Merge Sub Conduits</b> est r&eacute;gl&eacute; sur <code>TRUE</code>.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Sub Conduits</b><span style="font-size:80%;"> (<code>Link List</code>)</span>&nbsp;: liste des gaines ou des c&acirc;bles appartenant au faisceau.</li></ul>
-</div>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Conduit Dimensions</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Gauge</b><span style="font-size:80%;"> (<code>Float</code>)</span>&nbsp;: jauge ext&eacute;rieure due la gaine. Unit&eacute;&nbsp;: [mm^2]. Il est corr&eacute;l&eacute; avec les propri&eacute;t&eacute;s des dimensions&nbsp;: <b>Diameter</b>, <b>Width</b> et <b>Height</b> en fonction de la propri&eacute;t&eacute; <b>Profile Type</b>.</li>
@@ -114,35 +112,35 @@ La gaine MC2 comprend la gaine C3 et le c&acirc;ble CB2.</p>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260118194754
+Cached time: 20260122111003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.132 seconds
-Preprocessor visited node count: 566/1000000
+CPU time usage: 0.077 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 565/1000000
 Post&#8208;expand include size: 10833/2097152 bytes
 Template argument size: 2939/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 853/5000000 bytes
+Unstrip post&#8208;expand size: 862/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.824      1 -total
- 30.50%   14.585      7 Template:PropertyData
- 23.43%   11.205      7 Template:Variable
- 16.92%    8.092      1 Template:GuiCommand/fr
- 11.33%    5.420      2 Template:Docnav/fr
-  9.97%    4.768      4 Template:TitleProperty
-  9.25%    4.424      5 Template:Value
-  8.05%    3.848     12 Template:Incode
-  6.55%    3.133      2 Template:MenuCommand
-  5.89%    2.817      2 Template:Caption
+100.00%   28.843      1 -total
+ 30.36%    8.758      7 Template:PropertyData
+ 22.47%    6.480      7 Template:Variable
+ 18.63%    5.373      1 Template:GuiCommand/fr
+ 11.34%    3.271      2 Template:Docnav/fr
+ 10.28%    2.964      4 Template:TitleProperty
+  7.73%    2.228     12 Template:Incode
+  7.40%    2.135      5 Template:Value
+  6.85%    1.975      2 Template:Caption
+  5.80%    1.672      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:383068-0!canonical and timestamp 20260118194754 and revision id 1740810. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:383068-0!canonical and timestamp 20260122111002 and revision id 1742288. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
